--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Express Starter</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/466576c9ee.js" crossorigin="anonymous"></script>
+    <title>Goals Schedule</title>
   </head>
   <body>
     <noscript>
